--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,3 +1,4 @@
+
 <!-- Page Wrapper -->
 <div id="wrapper">
 
@@ -98,56 +99,7 @@
           </nav>
           <!-- End of Topbar -->
 
-          <!-- Begin Page Content -->
-          <div class="container-fluid">
-
-              <!-- Page Heading -->
-              <h1 class="h3 mb-2 text-gray-800">Control de Usuarios</h1>
-
-
-              <!-- DataTales Example -->
-              <div class="card shadow mb-4">
-                  <div class="card-header py-3">
-                      <h6 class="m-0 font-weight-bold text-primary">Usuarios</h6>
-                  </div>
-                  <div class="card-body">
-                      <div class="table-responsive table-striped">
-                          <table class="table table-bordered text-center" id="dataTable" width="100%" cellspacing="0">
-                              <thead>
-                                  <tr>
-                                      <th>#</th>
-                                      <th>Nombre</th>
-                                      <th>Username</th>
-                                      <th>Acciones</th>
-                                  </tr>
-                              </thead>
-                              <tbody>
-                                  <tr *ngFor="let usuario of usuarios">
-                                      <td>{{usuario.id}}</td>
-                                      <td>
-                                        <a [routerLink]="['/usuariosdetalle',usuario.id]">
-                                          <b>{{usuario.name}}</b>
-                                        </a>
-                                      </td>
-                                      <td>{{usuario.username}}</td>
-                                      <td>
-                                        <a class="btn btn-outline-info mr-3">
-                                          <i class="fa fa-pencil-alt"></i>
-                                        </a>
-                                        <a class="btn btn-outline-danger">
-                                          <i class="fa fa-trash-alt"></i>
-                                        </a>
-                                      </td>
-
-                                  </tr>
-                              </tbody>
-                          </table>
-                      </div>
-                  </div>
-              </div>
-
-          </div>
-          <!-- /.container-fluid -->
+          <router-outlet></router-outlet>
 
       </div>
       <!-- End of Main Content -->
@@ -184,10 +136,10 @@
                   <span aria-hidden="true">×</span>
               </button>
           </div>
-          <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+          <div class="modal-body">Selecciona "Logout" abajo si estas listo para terminar la sesion actual.</div>
           <div class="modal-footer">
               <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-              <a class="btn btn-primary" (click)="logout()">Logout</a>
+              <a class="btn btn-primary" (click)="logout()" data-dismiss="modal">Logout</a>
           </div>
       </div>
   </div>
